# pgs_capabilities

./: .gitignore  README.md  pyproject.toml
pgs_side_effects/registry/: __init__.py
pgs_side_effects/registry/capability_side_effects/: CS_APPENDONLY_JSONL_V0.md  CS_CONCURRENT_WORKFLOWS_V0.md  CS_MUTABLE_JSON_V0.md  CS_REGISTRY_V0.md  CS_SEND_EMAIL_V0.md  CS_WORKFLOW_GATEWAY_V0.md  CS_WORKFLOW_LOOP_V0.md
pgs_side_effects/testbed/: run_cs_contract_tests.py
pgs_side_effects/testbed/tests/: test_cs_appendonly_jsonl.py  test_cs_concurrent_workflows.py  test_cs_mutable_json.py  test_cs_name_registry.py  test_cs_registry.py  test_cs_send_email.py  test_cs_workflow_gateway.py
pgs_transforms/registry/: __init__.py
pgs_transforms/registry/capability_transforms/: CT_EXEC_EMIT_V0.md  CT_PURE_ASSEMBLE_RECORD_V0.md  CT_PURE_CHECK_QUOTA_AVAILABLE_V0.md  CT_PURE_CHECK_TRAINING_STATUS_V0.md  CT_PURE_DERIVE_CHILD_KEY_V0.md  CT_PURE_DERIVE_MASTER_KEY_V0.md  CT_PURE_ECDSA_SIGN_V0.md  CT_PURE_ENTROPY_TO_MNEMONIC_V0.md  CT_PURE_EVALUATE_INACTIVITY_V0.md  CT_PURE_EXTRACT_V0.md  CT_PURE_FILTER_RECORDS_V0.md  CT_PURE_GENERATE_ENTROPY_V0.md  CT_PURE_GENERATE_ID_V0.md  CT_PURE_KECCAK256_HASH_V0.md  CT_PURE_LOOKUP_V0.md  CT_PURE_MAP_RESULT_TO_HTTP_V0.md  CT_PURE_MNEMONIC_TO_SEED_V0.md  CT_PURE_PASSTHROUGH_V0.md  CT_PURE_PRIVATE_KEY_TO_PUBLIC_V0.md  CT_PURE_PUBKEY_TO_ETH_ADDRESS_V0.md  CT_PURE_VALIDATE_PARAMETER_RULES_V0.md  CT_PURE_VALIDATE_RECORD_STRUCTURE_V0.md  (+1 more)
pgs_transforms/testbed/: run_ct_conformance_crypto_tests.py  run_ct_conformance_governance_tests.py
(+87 files in other folders)
