[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgs_capabilities"
version = "0.4.0"
description = "PGS Capabilities — governed capability substrate (CT and CS implementations)"
readme = "README.md"
requires-python = ">=3.10"

license = "Apache-2.0"

authors = [
  { name = "Bachi" }
]

keywords = ["pgs", "protocol", "capabilities", "transforms", "side-effects"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/bachipeachy/pgs_capabilities"
Repository = "https://github.com/bachipeachy/pgs_capabilities"

[tool.setuptools.packages.find]
include = ["pgs_*"]
